[gd_scene load_steps=9 format=2]

[ext_resource path="res://PickUP/Mana/PickUp_Mana.gd" type="Script" id=1]
[ext_resource path="res://PickUP/Impulse.tscn" type="PackedScene" id=2]
[ext_resource path="res://PickUP/Mana/IdleEffect.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bullet/shadow_ball.png" type="Texture" id=4]
[ext_resource path="res://PickUP/Mana/mana_bottle_v3_final.png" type="Texture" id=5]
[ext_resource path="res://PickUP/Ani/Span.tres" type="Animation" id=6]
[ext_resource path="res://PickUP/SpawnEffect.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 53.4665, 108.218 )

[node name="PickUp_Mana" type="Area2D" groups=[
"PickUp",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
mana_increase = 15
impulse_template = ExtResource( 2 )

[node name="IdleEffect" parent="." index="0" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 1.91938, -2.7729 )
scale = Vector2( 2.01224, 0.618838 )
shape = SubResource( 1 )

[node name="shadow_ball" type="Sprite" parent="." index="2"]

position = Vector2( -4.92147, 60.7171 )
scale = Vector2( 1.51051, 0.552103 )
texture = ExtResource( 4 )

[node name="Png" type="Sprite" parent="." index="3"]

editor/display_folded = true
scale = Vector2( 0.406547, 0.406547 )
_sections_unfolded = [ "Transform" ]

[node name="Png" type="Sprite" parent="Png" index="0"]

scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="DespawnTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = "Span"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Span = ExtResource( 6 )
blend_times = [  ]

[node name="SpawnEffect" parent="." index="6" instance=ExtResource( 7 )]

[connection signal="body_entered" from="." to="." method="_on_PickUp_Mana_body_entered"]

[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]


